src/OpenCvSharp/Internal/Interop/NativeMethods.XImgProc.DllImport.cs


        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_use_post_processing")]
        internal static extern int XImgProcEdgeAwareInterpolatorGetUsePostProcessing(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_use_post_processing")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetUsePostProcessing(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_fgs_lambda")]
        internal static extern int XImgProcEdgeAwareInterpolatorGetFgsLambda(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_fgs_lambda")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetFgsLambda(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_get_fgs_sigma")]
        internal static extern int XImgProcEdgeAwareInterpolatorGetFgsSigma(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_aware_interpolator_set_fgs_sigma")]
        internal static extern int XImgProcEdgeAwareInterpolatorSetFgsSigma(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_k")]
        internal static extern int XImgProcRICInterpolatorGetK(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_k")]
        internal static extern int XImgProcRICInterpolatorSetK(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_size")]
        internal static extern int XImgProcRICInterpolatorGetSuperpixelSize(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_size")]
        internal static extern int XImgProcRICInterpolatorSetSuperpixelSize(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_nn_count")]
        internal static extern int XImgProcRICInterpolatorGetSuperpixelNNCount(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_nn_count")]
        internal static extern int XImgProcRICInterpolatorSetSuperpixelNNCount(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_ruler")]
        internal static extern int XImgProcRICInterpolatorGetSuperpixelRuler(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_ruler")]
        internal static extern int XImgProcRICInterpolatorSetSuperpixelRuler(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_superpixel_mode")]
        internal static extern int XImgProcRICInterpolatorGetSuperpixelMode(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_superpixel_mode")]
        internal static extern int XImgProcRICInterpolatorSetSuperpixelMode(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_alpha")]
        internal static extern int XImgProcRICInterpolatorGetAlpha(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_alpha")]
        internal static extern int XImgProcRICInterpolatorSetAlpha(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_model_iter")]
        internal static extern int XImgProcRICInterpolatorGetModelIter(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_model_iter")]
        internal static extern int XImgProcRICInterpolatorSetModelIter(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_refine_models")]
        internal static extern int XImgProcRICInterpolatorGetRefineModels(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_refine_models")]
        internal static extern int XImgProcRICInterpolatorSetRefineModels(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_max_flow")]
        internal static extern int XImgProcRICInterpolatorGetMaxFlow(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_max_flow")]
        internal static extern int XImgProcRICInterpolatorSetMaxFlow(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_use_variational_refinement")]
        internal static extern int XImgProcRICInterpolatorGetUseVariationalRefinement(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_use_variational_refinement")]
        internal static extern int XImgProcRICInterpolatorSetUseVariationalRefinement(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_use_global_smoother_filter")]
        internal static extern int XImgProcRICInterpolatorGetUseGlobalSmootherFilter(IntPtr interpolator, out int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_use_global_smoother_filter")]
        internal static extern int XImgProcRICInterpolatorSetUseGlobalSmootherFilter(IntPtr interpolator, int value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_fgs_lambda")]
        internal static extern int XImgProcRICInterpolatorGetFgsLambda(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_fgs_lambda")]
        internal static extern int XImgProcRICInterpolatorSetFgsLambda(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_get_fgs_sigma")]
        internal static extern int XImgProcRICInterpolatorGetFgsSigma(IntPtr interpolator, out float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_ric_interpolator_set_fgs_sigma")]
        internal static extern int XImgProcRICInterpolatorSetFgsSigma(IntPtr interpolator, float value);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_create")]
        internal static extern int XImgProcEdgeDrawingCreate(out IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_release_handle")]
        internal static extern void XImgProcEdgeDrawingReleaseHandle(IntPtr detector);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_params")]
        internal static extern int XImgProcEdgeDrawingGetParams(IntPtr detector, out XImgProcEdgeDrawingParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_set_params")]
        internal static extern int XImgProcEdgeDrawingSetParams(IntPtr detector, ref XImgProcEdgeDrawingParamsNative parameters);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_edges")]
        internal static extern int XImgProcEdgeDrawingDetectEdges(IntPtr detector, IntPtr src);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_edge_image")]
        internal static extern int XImgProcEdgeDrawingGetEdgeImage(IntPtr detector, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_gradient_image")]
        internal static extern int XImgProcEdgeDrawingGetGradientImage(IntPtr detector, IntPtr dst);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segments_count")]
        internal static extern int XImgProcEdgeDrawingGetSegmentsCount(IntPtr detector, out int groupCount, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segments_fill")]
        internal static extern int XImgProcEdgeDrawingGetSegmentsFill(IntPtr detector, int[] offsets, int offsetCapacity, XImgProcPointNative[] points, int pointCapacity, out int groupCount, out int pointCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_lines")]
        internal static extern int XImgProcEdgeDrawingDetectLines(IntPtr detector, IntPtr lines);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_lines_count")]
        internal static extern int XImgProcEdgeDrawingDetectLinesCount(IntPtr detector, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_lines_fill")]
        internal static extern int XImgProcEdgeDrawingDetectLinesFill(IntPtr detector, float[] lines, int lineCapacity, out int lineCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segment_indices_of_lines_count")]
        internal static extern int XImgProcEdgeDrawingGetSegmentIndicesOfLinesCount(IntPtr detector, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_get_segment_indices_of_lines_fill")]
        internal static extern int XImgProcEdgeDrawingGetSegmentIndicesOfLinesFill(IntPtr detector, int[] indices, int indexCapacity, out int indexCount);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_ellipses")]
        internal static extern int XImgProcEdgeDrawingDetectEllipses(IntPtr detector, IntPtr ellipses);

        [DllImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_ximgproc_edge_drawing_detect_ellipses_count")]
        internal static extern int XImgProcEdgeDrawingDetectEllipsesCount(IntPtr detector, out int ellipseCount);
